@@ -26,6 +26,8 @@
 	.type	_EchoMono32,@func
 	.global	_EchoStereo32
 	.type	_EchoStereo32,@func
+	.global	_EchoMulti32
+	.type	_EchoMulti32,@func
 
 
 .set	ahiecho_Delay,		0
@@ -290,4 +292,77 @@ _EchoStereo32:
 	dbf	d7,1b
 	DSPECHO_POST
 
+
+_EchoMulti32:
+	DSPECHO_PRE
+
+/* in:
+* a0	struct Echo*
+* a1	& x[n]
+* a3	& d[n-N]
+* a6	& d[n]
+*/
+
+/** The delay buffer is only 16 bit, and only the upper word of the 32 bit
+*** input data is used! */
+
+1:
+	move.w	(a1),d0				/*Get left sample x[n] (high word)*/
+	ext.l	d0
+	move.l	d0,d1
+	muls.l	ahiecho_MixN(a0),d0
+	move.w	(a3)+,d3			/* Get left delayed sample d[n-N]*/
+	ext.l	d3
+	move.l	d3,d2
+	muls.l	ahiecho_MixD(a0),d3
+	add.l	d0,d3
+	move.l	d3,(a1)+			/* x[n]=MixN*x[n]+MixD*d[n-N] */
+
+	move.w	(a1),d0				/* Get right sample x[n] (high word) */
+	ext.l	d0
+	move.l	d0,d4
+	muls.l	ahiecho_MixN(a0),d0
+	move.w	(a3)+,d3			/*Get right delayed sample d[n-N]*/
+	ext.l	d3
+	move.l	d3,d5
+	muls.l	ahiecho_MixD(a0),d3
+	add.l	d0,d3
+	move.l	d3,(a1)+			/* x[n]=MixN*x[n]+MixD*d[n-N] */
+
+	addq.l	#1,d2				/* Fix for -1 */
+	move.l	d2,d0
+	muls.l	ahiecho_FeedbackDS(a0),d2	/* d2=FeedbackDS*d[n-N] (left) */
+	muls.l	ahiecho_FeedbackDO(a0),d0
+
+	addq.l	#1,d5				/* Fix for -1 */
+	move.l	d5,d3
+	muls.l	ahiecho_FeedbackDS(a0),d5	/* d5=FeedbackDS*d[n-N] (right) */
+	muls.l	ahiecho_FeedbackDO(a0),d3
+
+	add.l	d3,d2				/* d2=...+FeedbackDO*d[n-N] */
+	add.l	d0,d5				/* d5=...+FeedbackDO*d[n-N] */
+
+	move.l	d1,d0
+	muls.l	ahiecho_FeedbackNS(a0),d0
+	add.l	d0,d2				/* d2=...+FeedbackNS*x[n] */
+	muls.l	ahiecho_FeedbackNO(a0),d1
+	add.l	d1,d5				/* d5=...+FeedbackNO*x[n] */
+
+	move.l	d4,d0
+	muls.l	ahiecho_FeedbackNO(a0),d0
+	add.l	d0,d2				/* d2=...+FeedbackNO*x[n] */
+	muls.l	ahiecho_FeedbackNS(a0),d4
+	add.l	d4,d5				/* d5=...+FeedbackNS*x[n] */
+
+	swap.w	d5
+	move.w	d5,d2
+	move.l	d2,(a6)+			/* store d1 and d4 */
+
+	add.w	#6*4,a1
+	add.w	#6*2,a3
+	add.w	#6*2,a6
+	
+	dbf	d7,1b
+	DSPECHO_POST
+	
 	.end
