@@ -107,8 +107,7 @@ update_MasterVolume ( struct AHIPrivAudioCtrl *audioctrl )
 
 #define mode_stereo 1
 #define mode_32bit  2
-#define mode_ncnm   4       // No cross, no mix
-#define mode_fast   8
+#define mode_multi  4
 
 BOOL
 update_DSPEcho ( struct AHIEffDSPEcho *echo,
@@ -147,6 +146,10 @@ update_DSPEcho ( struct AHIEffDSPEcho *echo,
       samplesize = 4;
       break;
 
+    case AHIST_L7_1:
+      samplesize = 16;
+      break;
+      
     default:
       return FALSE; // Panic
   }
@@ -182,6 +185,9 @@ update_DSPEcho ( struct AHIEffDSPEcho *echo,
       case AHIST_S32S:
         mode |= (mode_32bit | mode_stereo);
         break;
+      case AHIST_L7_1:
+	mode |= (mode_32bit | mode_multi);
+	break;
     }
 
     es->ahiecho_Delay      = echo->ahiede_Delay;
@@ -221,6 +227,11 @@ update_DSPEcho ( struct AHIEffDSPEcho *echo,
       case 3:
         es->ahiecho_Code   = do_DSPEchoStereo32;
         break;
+
+      // multichannel 32 bit
+      case 6:
+	es->ahiecho_Code   = do_DSPEchoMulti32;
+	break;
 
       // Should not happen!
       default:
