@@ -1,5 +1,8 @@
 2004-11-02  Martin Blom  <martin@blom.org>
 
+	* ahi.device: DSP echo and master volume did not work in 7.1
+	mode. Fixed now. [Marcin 'Morgoth' Kurek]
+
 	* Updated copyright year and removed almost all CVS/RCS tags from
 	the source code.
 
